--- a/book/templates/home.html
+++ b/book/templates/home.html
@@ -17,7 +17,7 @@
     Book Name:- <input type="text" name="bname" value="{{single_book.name}}" placeholder="Enter Book Name"><br><br>
     Book Price:- <input type="number" name="bprice" value="{{single_book.price}}" placeholder="Enter Book Price"><br><br>
     Book Qty:- <input type="number" name="bqty" value="{{single_book.qty}}" placeholder="Enter Book Qty"><br><br>
-
+    Book Type:- <input type="text" name="btype" value="{{single_book.btype}}" placeholder="Enter book type"><br><br>
     <input type="submit" value="Submit">
 </form>
 <br>
