commit by vishnu

--- a/book/templates/form_home.html
+++ b/book/templates/form_home.html
@@ -3,7 +3,7 @@
 {% block content %}
 <form method="post">
     {% csrf_token %}
-
+<h2>Changes for git</h2>
 {% if messages %}
     {% for message in messages %}
     <div class="container-fluid p-0">
